--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="main-grid">
 
-        <section>
+        <!-- <section>
 
             <div class="set">
                 <div><img width="128" src="./css/Images/hexagon.png"></div>
@@ -27,7 +27,7 @@
                 <div><img width="128" src="./css/Images/svgs/hexagon2.svg"></div>
                 <div><img width="128" src="./css/Images/svgs/hexagon2.svg"></div>
             </div>
-            
+
             <div class="set set2">
                 <div><img width="128" src="./css/Images/hexagon.png"></div>
                 <div><img width="128" src="./css/Images/hexagons.png"></div>
@@ -50,7 +50,7 @@
                 <div><img width="128" src="./css/Images/svgs/hexagon2.svg"></div>
             </div>
 
-        </section>
+        </section> -->
 
         <div class="pimg1">
             <div class="ptext">
@@ -134,19 +134,19 @@
 
         <section class="container2">
             <h2> F I N A L</h2>
-            <p>Lorem ipsum dolor, sit amet 
-                consectetur adipisicing elit. 
-                Deserunt dolore sit eius incidunt. 
-                Dolores consectetur itaque aperiam 
-                voluptas animi sint, maxime suscipit 
-                assumenda asperiores commodi temporibus, 
-                sequi natus obcaecati porro dignissimos 
-                aliquid fuga aliquam maiores eveniet earum 
-                officia facere fugiat, error illo? Quis 
-                error natus aut blanditiis iusto impedit 
+            <p>Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit.
+                Deserunt dolore sit eius incidunt.
+                Dolores consectetur itaque aperiam
+                voluptas animi sint, maxime suscipit
+                assumenda asperiores commodi temporibus,
+                sequi natus obcaecati porro dignissimos
+                aliquid fuga aliquam maiores eveniet earum
+                officia facere fugiat, error illo? Quis
+                error natus aut blanditiis iusto impedit
                 eligendi.</p>
         </section>
-    
+
     </div>
 
     <script src="main.js"></script>
